// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can add new item using onPatch 1`] = `
Array [
  Object {
    "op": "add",
    "path": "/items/0",
    "value": Object {
      "image": "",
      "name": "Cheese",
      "price": 100,
    },
  },
  Object {
    "op": "replace",
    "path": "/items/0/name",
    "value": "Pizza Cheese",
  },
]
`;

exports[`can add new items 1`] = `
Object {
  "items": Array [
    Object {
      "image": "",
      "name": "Pizza Cheese",
      "price": 100,
    },
  ],
}
`;

exports[`can add new items using OnSnapshot 1`] = `
Object {
  "items": Array [
    Object {
      "image": "",
      "name": "Pizza Cheese",
      "price": 100,
    },
  ],
}
`;

exports[`can add new items using OnSnapshot 2`] = `
Array [
  Object {
    "items": Array [
      Object {
        "image": "",
        "name": "Cheese",
        "price": 100,
      },
    ],
  },
  Object {
    "items": Array [
      Object {
        "image": "",
        "name": "Pizza Cheese",
        "price": 100,
      },
    ],
  },
]
`;
